HTML / CSS Update
It’s now up at: http://cscilab.bc.edu/~delanetc/radioRedux/

Added / styled select for years (realized this might not be the best
way to do this).

Also added play / next / prev buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		
 		<div id="musicContainer" class="center">
 			<form name="yearForm">
-				<!-- Note: add in loop / db json link for years -->
+				<!-- Note: add in loop / db json link for years... also is dropdown the best way to do this? -->
 				<select>
 					<option value="1991">1991</option>
 					<option value="1992">1992</option>
@@ -37,6 +37,17 @@
 			</form>
 		</div>
 		<div id="controls">
+			<div class="controls_middle">
+				<div class="prevbutton">
+					<img src="img/btn_left.png" alt="Previous song button">
+				</div>
+				<div class="playbutton">
+					<img src="img/btn_play.png" alt="Play button">
+				</div>
+				<div class="nextbutton">
+					<img src="img/btn_right.png" alt="Next song button">
+				</div>
+			</div>
 		</div>
 		<div id="controlsBottom" class="center">
 		</div>
