Register links to db
Still need to fix a few things but working overall

--- a/account/register.html
+++ b/account/register.html
@@ -18,7 +18,7 @@
 		<img class="center" src="../img/banner.png" alt="Radio Redux">
 		
 		<div id="musicContainer" class="center">
-			<form name="register" id="register" class="center">
+			<form name="register" id="register" class="center" action="../include/login.php" method="post">
 				<input type="text" class="center" id="first_name" name="first_name" placeholder="First Name" />
 				<input type="text" class="center" id="last_name" name="last_name" placeholder="Last Name" />
 				<input type="email" class="center" id="emailReg" name="emailReg" placeholder="Email Address" required />
